components/test-component2344232d/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: test-app
    appstudio.openshift.io/component: test-component2344232d
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: eltest-component2344232d
  namespace: test2
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-test-component2344232d
    weight: null
status: {}
